@@ -1,5 +1,10 @@
 [b]Version 0.6.6[/b]:
 
+(2008-12-19)
+ * Applied (with a few changes) a patch by matt <matt@endboss.org>.
+   This patch adds 3 modes for the stay on top option: always, never and 
+   while playing.
+
 (2008-12-12)
  * Added a new option Video->Preview. This option creates a preview 
    (thumbnails) of the selected video. There are options to choose the
